--- a/web/index.html
+++ b/web/index.html
@@ -9,10 +9,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="search">
-            <input type="text" class="search-input" placeholder="Enter the URL">
-            <button class="search-button" type="submit">search</button>  
+    <div class="main-container">
+        <div class="heading">
+            <img src="./fox-icon.png" alt="icon">
+            <h1>foxy<sub>proxy</sub></h1>
+        </div>
+        <div class="container">
+            <div class="search">
+                <input type="text" class="search-input" id="url" placeholder="Enter the URL">
+                <button class="search-button" id="submit-btn" type="submit">search</button>  
+            </div>
+        </div>
+        <div class="desc">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, amet?</p>
         </div>
     </div>
 </body>
