work in progress, eel function fixed

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOXY</title>
     <link rel="icon" type="image/x-icon" href="./fox-icon.png">
+    <!-- css -->
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -17,12 +18,18 @@
         <div class="container">
             <div class="search">
                 <input type="text" class="search-input" id="url" placeholder="Enter the URL">
-                <button class="search-button" id="submit-btn" type="submit">search</button>  
+                <button class="search-button" id="submit-btn" type="submit" onclick="search()">search</button>  
             </div>
         </div>
         <div class="desc">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, amet?</p>
+            <p id="res"></p>
         </div>
     </div>
+
+    <!-- eel -->
+    <script type="text/javascript" src="eel.js"></script>
+    <!-- js -->
+	<script src="./script.js"></script>
 </body>
 </html>
