--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="desc">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, amet?</p>
+            <p><span>*</span> Please try to give a valid URL, and also try to give the full address of the URL<br><br>Eg: https://www.google.com/</p>
             <p id="res"></p>
         </div>
     </div>
