--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FOXY</title>
+    <title>F O X Y</title>
     <link rel="icon" type="image/x-icon" href="./fox-icon.png">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -22,7 +26,8 @@
             </div>
         </div>
         <div class="desc">
-            <p><span>*</span> Please try to give a valid URL, and also try to give the full address of the URL<br><br>Eg: https://www.google.com/</p>
+            <p><span>*</span> Please try to give a valid URL and also try to give the full address of the URL (Eg: https://www.google.com/)</p>
+            <p><span>*</span> Please wait till the chrome opens after clicking the search button and <br> also don't close this tab after the chrome has open until you have finished the browsing.</p>
             <p id="res"></p>
         </div>
     </div>
