--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="desc">
             <p><span>*</span> Please try to give a valid URL and also try to give the full address of the URL (Eg: https://www.google.com/)</p>
-            <p><span>*</span> Please wait till the chrome opens after clicking the search button and <br> also don't close this tab after the chrome has open until you have finished the browsing.</p>
+            <p><span>*</span> Don't close this tab after the chrome has open til you have finished browsing.</p>
             <p id="res"></p>
         </div>
     </div>
